syntax = "proto3";

package quiz;

option go_package = "whoami-server/protogen/golang/quiz";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service QuizService {
  rpc AddStream(stream Quiz) returns (stream Quiz) {
    option (google.api.http) = {
      post: "/api/v1/quizzes/add"
      body: "*"
    };
  }

  rpc GetBatch(GetBatchRequest) returns (GetBatchResponse) {
    option (google.api.http) = {
      get: "/api/v1/quizzes"
    };
  }

  rpc GetByID(GetByIDRequest) returns (Quiz) {
    option (google.api.http) = {
      get: "/api/v1/quizzes/{id}"
    };
  }

  rpc GetStream(google.protobuf.Empty) returns (stream Quiz) {}
}

message Quiz {
  string id = 1;
  string title = 2;
  repeated string results = 3;
}

message GetBatchRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message GetBatchResponse {
  repeated Quiz quizzes = 1;
  string next_page_token = 2;
}

message GetByIDRequest {
  string id = 1;
}
